[package]
name = "weact-studio-epd"
version = "0.1.0"
edition = "2021"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
description = "Unofficial driver for WeAct Studio E-paper modules"

[dependencies]
display-interface = "0.5.0"
embedded-hal = "1.0.0"
embedded-graphics = { version = "0.8.1", optional = true }
sealed = "0.5.0"

[features]
default = ["graphics"]
graphics = ["dep:embedded-graphics"]
