[package]
name = "weact-studio-epd"
version = "0.1.0"
edition = "2021"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
description = "Unofficial driver for WeAct Studio E-paper modules"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avsaase/weact-studio-epd"

[dependencies]
display-interface = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-graphics = { version = "0.8.1", optional = true }
maybe-async-cfg = "0.2.3"
sealed = "0.5.0"

[features]
default = ["graphics"]
# Enable `embedded-graphics` support.
graphics = ["dep:embedded-graphics"]
# Switch to a blocking API. Replaces the async API.
blocking = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
