[package]
name = "rp2040_2_9_inch_bw"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "intrinsics",
    "rom-v2-intrinsics",
] }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-5120",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

embedded-hal-bus = "0.1.0"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"

weact-studio-epd = { path = "../.." }
