[package]
name = "stm32g431_examples"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "5f9bc6def7ea8698a6ce45d8e12e1d1bd8cce876", features = [
        "defmt",
        "time-driver-any",
        "stm32g431cb",
        "memory-x",
        "unstable-pac",
        "exti",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", rev = "5f9bc6def7ea8698a6ce45d8e12e1d1bd8cce876", features = [
        "arch-cortex-m",
        "executor-thread",
        "executor-interrupt",
        "defmt",
        "integrated-timers",
        "task-arena-size-8192",
] }
embassy-time = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "5f9bc6def7ea8698a6ce45d8e12e1d1bd8cce876", features = [
        "defmt",
        "defmt-timestamp-uptime",
        "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embedded-hal-bus = "0.1.0"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
display-interface = "0.5.0"

heapless = "0.8.0"
profont = "0.7.0"

weact-studio-epd = { path = "../..", features = ["sync"] }
